--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -34,7 +34,12 @@
           <p><strong> <%= past_booking.granny.nickname %></strong></p>
           <p><%= past_booking.granny.house_number %> <%= past_booking.granny.street %> <%= past_booking.granny.postcode %> <%= past_booking.granny.city %></p>
           <div class="notification-actions">
-            <%= link_to "Leave a review!", new_granny_review_path(past_booking.granny), class:"fas fa-pencil-alt" %>
+            <%= link_to new_granny_review_path(past_booking.granny) do %>
+              Leave a review!
+              <svg xmlns="http://www.w3.org/2000/svg" style="width:1rem" viewBox="0 0 20 20" fill="currentColor">
+                <path d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
+              </svg>
+            <% end %>
           </div>
         </div>
         <% end %>
