--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -22,17 +22,16 @@
   padding: 0px 60px;
 }
 
-.nickname_and_rating{
-
-}
-
 .ratings {
   padding: 0 10px;
   display: flex;
-  align-items: flex-end;
   justify-content: space-between;
-  column-gap: 16px;
   width: 550px;
+}
+
+.ratings-flex-box{
+  column-gap: 16px;
+  display:flex;
 }
 
 .bold {
@@ -64,6 +63,8 @@
   padding: 10px 10px;
 }
 
+
+
 .notification {
   display: flex;
   align-items: flex-start;
@@ -86,7 +87,6 @@
   margin-bottom: 17px;
 }
 
-
 .notification p {
   margin: 0;
   line-height: 1.4;
@@ -100,7 +100,6 @@
   opacity: 0;
   display: flex;
   transition: ease .3s;
-
 }
 
 .notification:hover .notification-actions {
