--- a/app/views/grannies/show.html.erb
+++ b/app/views/grannies/show.html.erb
@@ -6,13 +6,13 @@
     </div>
 
     <div class="granny_info">
-      <div class="nickname_and_rating">
-        <h1><strong><%= @granny.nickname %></strong></h1>
-        <div class="ratings">
-          <h5 class="bold"> ⭐️ 4.89</h5>
-          <h5 class="underlined">25 reviews</h5>
-          <h5>❤️ save</h5>
+      <h1><strong><%= @granny.nickname %></strong></h1>
+      <div class="ratings">
+        <div class="ratings-flex-box">
+          <span class="bold"> ⭐️ 4.89</span>
+          <span class="underlined">25 reviews</span>
         </div>
+        <span>❤️ save</span>
       </div>
       <div class="interesting_facts">
         <h3>Special Skills</h3>
