--- a/app/assets/stylesheets/pages/_bookings.scss
+++ b/app/assets/stylesheets/pages/_bookings.scss
@@ -20,7 +20,8 @@
 
 .booking-text{
   padding: 10px;
-  width: 400px;
+  width: 386px;
+  border-right: 0.6px solid #F4F4F4;
 }
 .booking-row{
   display:flex;
@@ -30,7 +31,6 @@
 
 .booking .booking-content {
   flex-grow: 1;
-  margin-bottom: 17px;
   display: flex;
 }
 
@@ -44,7 +44,7 @@
   font-weight: bold;
 }
 .booking .booking-actions {
-  opacity: 0;
+  opacity: 0.6;
   display: flex;
   transition: ease .3s;
 }
@@ -57,6 +57,7 @@
   color: #999999;
   margin-left: 16px;
   font-size: 14px;
+  padding-top: 39px;
 }
 
 .booking .booking-actions a:hover {
