--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,4 +1,11 @@
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
 .footer {
+  margin-top: auto;
   background: #fff;
   display: flex;
   align-items: center;
@@ -6,9 +13,6 @@
   height: 54px;
   padding: 0px 100px;
   color: rgba(0,0,0,0.3);
-  position: fixed;
-  bottom: 0px;
-  width: 100%;
   padding: 10px 10px 0px 10px;
 }
 .footer-links {
