--- a/app/views/grannies/show.html.erb
+++ b/app/views/grannies/show.html.erb
@@ -9,8 +9,8 @@
       <h1><strong><%= @granny.nickname %></strong></h1>
       <div class="ratings">
         <div class="ratings-flex-box">
-          <span class="bold"> ⭐️ 4.89</span>
-          <span class="underlined">25 reviews</span>
+          <span class="bold"> ⭐️ <%=@average%></span>
+          <span class="underlined"> <%= @total_ratings %> reviews</span>
         </div>
         <span>❤️ save</span>
       </div>
